# P2-CNN-using-NumPy

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/: training.py
apps/ShowCase/: ShowCase.py  board.py  board_layer.py  button.py  rect.py  text_box.py  utils.py
data/: generate_mnist_csv.py
src/p2_cnn/: model.py
src/p2_cnn/core/: activation.py  layer.py  test.py  utils.py
src/p2_cnn/layers/: Flatten.py  conv2d.py  dense.py  pooling.py
